--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
       <button type="button" class="btn-star"><i class="far fa-star"></i></button>
       <input type="text" id="search" placeholder="Type location and press enter">
       <div class="icon-search"><i class="fas fa-search"></i></div>
-      <!-- <select name="unit">
+      <select name="unit" disabled>
         <option selected value="GC">°C</option>
         <option value="FA">°F</option>
-      </select> -->
+      </select>
     </form>
     <section id="today-forecast" class="today-forecast">
     </section>
