--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Weather App</title>
   <link rel="stylesheet" href="css/reset.css">
@@ -13,18 +13,24 @@
 <body>
   <main class="page-content">
     <h1 class="heading">- Weather app -</h1>
-    <form class="search-bar">
-      <button type="button" class="btn-star"><i class="far fa-star"></i></button>
+    <section class="search-bar">
+      <button type="button" id="star" class="btn-star"><i class="far fa-star"></i></button>
       <input type="text" id="search" placeholder="Type location and press enter">
       <div class="icon-search"><i class="fas fa-search"></i></div>
-      <select name="unit" disabled>
+      <select id="unit">
         <option selected value="GC">°C</option>
         <option value="FA">°F</option>
       </select>
-    </form>
-    <section id="today-forecast" class="today-forecast">
     </section>
-    <section id="week-forecast" class="week-forecast">
+    <section id="today-forecast" class="today-forecast"></section>
+    <section id="week-forecast" class="week-forecast"></section>
+    <section class="favorite">
+      <h2>Favorite cities</h2>
+      <ul id="favorite"></ul>
+    </section>
+    <section class="recent">
+        <h2>Recently viewed cities</h2>
+        <ul id="recent"></ul>
     </section>
   </main>
   <script src="js/app.js"></script>
