--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Weather App</title>
-  <link rel="stylesheet" href="/dist/fccdc5778d6fb413774915fa8ca78ed1.css">
-  <link rel="stylesheet" href="/dist/1f2d2858bcecb1fa3a4af28caeb2061d.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-  <script defer="" src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-<script src="/dist/fccdc5778d6fb413774915fa8ca78ed1.js"></script><script src="/dist/1f2d2858bcecb1fa3a4af28caeb2061d.js"></script></head>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+</head>
 <body>
   <main id="root">
     <!-- <div class="today-forecast" id="today-forecast"></div>
@@ -25,6 +25,6 @@
       </div>
     </div> -->
   </main>
-  <script src="/dist/fe2cd0ec559fcd541e3231ee14ce3f9b.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
