--- a/src/index.html
+++ b/src/index.html
@@ -11,20 +11,8 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
-  <main id="root">
-    <!-- <div class="today-forecast" id="today-forecast"></div>
-    <div class="week-forecast" id="week-forecast"></div> 
-    <div class="lists">
-      <div class="favorite-list">
-        <h2><i class="far fa-star"></i> Favorite</h2>
-        <ul id="favorite"></ul>
-      </div>
-      <div class="recent-list">
-        <h2><i class="fas fa-history"></i> Recently viewed</h2>
-        <ul id="recent"></ul>
-      </div>
-    </div> -->
-  </main>
+  <main class="page-content"></main>
+  <aside class="lists"></aside>
   <script src="./index.js"></script>
 </body>
 </html>
