--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 <body>
   <main class="page-content"></main>
   <aside class="lists"></aside>
+
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en-GB&key=AIzaSyDacIY2y0FpYJPzviDRd25k_nQWvausoPs"></script>
   <script src="./index.js"></script>
 </body>
 </html>
