--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
   <aside class="lists"></aside>
 
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en-GB&key=AIzaSyDacIY2y0FpYJPzviDRd25k_nQWvausoPs"></script>
-  <script src="./index.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 </html>
