--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Weather App</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <!-- <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css"> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
@@ -15,6 +15,6 @@
   <aside class="lists"></aside>
 
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en-GB&key=AIzaSyDacIY2y0FpYJPzviDRd25k_nQWvausoPs"></script>
-  <script type="module" src="./js/index.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 </html>
