--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
-  <main class="page-content"></main>
-  <aside class="lists"></aside>
+  <div id="root"></div>
 
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en-GB&key=AIzaSyDacIY2y0FpYJPzviDRd25k_nQWvausoPs"></script>
   <script src="./js/index.js"></script>
