--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
   <div id="root"></div>
 
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en-GB&key=AIzaSyDacIY2y0FpYJPzviDRd25k_nQWvausoPs"></script>
-  <script src="./js/index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
