--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Weather App</title>
-  <!-- <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css"> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
